--- a/base/configs/superset/assets/charts/HC_NCD_OPD_Register_Report_17.yaml
+++ b/base/configs/superset/assets/charts/HC_NCD_OPD_Register_Report_17.yaml
@@ -76,6 +76,7 @@ params:
   extra_form_data: {}
   dashboards:
   - 17
+  annotation_layers: []
 query_context: '{"datasource":{"id":30,"type":"table"},"force":false,"queries":[{"time_range":"No
   filter","granularity":"Visit Date","filters":[],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","Patient''s name","OpenMRS ID","Gender","Phone
