--- a/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_and_screened_for_the_first_time_with_a_follow-up_date_and_diagnosed_with_Hypertension__Diabetes_and_were_given_medication_with_at_least_a_4_weeks_prescription_13.yaml
+++ b/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_and_screened_for_the_first_time_with_a_follow-up_date_and_diagnosed_with_Hypertension__Diabetes_and_were_given_medication_with_at_least_a_4_weeks_prescription_13.yaml
@@ -78,6 +78,7 @@ params:
   extra_form_data: {}
   dashboards:
   - 20
+  annotation_layers: []
 query_context: '{"datasource":{"id":36,"type":"table"},"force":false,"queries":[{"time_range":"No
   filter","granularity":"Visit Start date","filters":[{"col":"indicator","op":"==","val":"80-pecent-followup-with-hypertension-iabetes-and-medication"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
