--- a/base/configs/superset/assets/dashboards/NCD_HIS_Report_Dashboard_9.yaml
+++ b/base/configs/superset/assets/dashboards/NCD_HIS_Report_Dashboard_9.yaml
@@ -2,13 +2,16 @@ dashboard_title: NCD HIS Report Dashboard
 description: null
 css: ''
 slug: null
+certified_by: null
+certification_details: null
+published: true
 uuid: c7de4cc7-bc96-48da-8723-b72028c6aa46
 position:
   CHART-K-4SQcOr5u:
     children: []
     id: CHART-K-4SQcOr5u
     meta:
-      chartId: 144
+      chartId: 4
       height: 42
       sliceName: NCD HIS New Cases From The Beginning
       uuid: edc6788b-ea27-457f-b3e7-1e272b7109ba
@@ -22,7 +25,7 @@ position:
     children: []
     id: CHART-explore-148-1
     meta:
-      chartId: 148
+      chartId: 15
       height: 50
       sliceName: NCD HIS Follow-up Cases Within Reporting Range
       uuid: e2896abd-821a-4aa8-8a19-c70c9eb18960
@@ -36,7 +39,7 @@ position:
     children: []
     id: CHART-explore-149-1
     meta:
-      chartId: 149
+      chartId: 19
       height: 50
       sliceName: NCD HIS Follow-up Cases From The Beginning
       uuid: 17f99ed6-713a-4436-9e7c-79639f96490c
@@ -50,7 +53,7 @@ position:
     children: []
     id: CHART-nSlyozQPY1
     meta:
-      chartId: 143
+      chartId: 2
       height: 42
       sliceName: NCD HIS New Cases Within Reporting Range
       uuid: b3599541-6658-4325-968b-82dd749af4ec
@@ -103,7 +106,6 @@ position:
     - GRID_ID
     type: ROW
 metadata:
-  show_native_filters: true
   color_scheme: ''
   refresh_frequency: 0
   shared_label_colors: {}
@@ -288,7 +290,7 @@ metadata:
       rootPath:
       - ROOT_ID
       excluded:
-      - 144
+      - 4
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
@@ -322,8 +324,8 @@ metadata:
       rootPath:
       - ROOT_ID
       excluded:
-      - 148
-      - 143
+      - 15
+      - 2
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
