--- a/base/configs/superset/assets/charts/NCD_Indicators_7.yaml
+++ b/base/configs/superset/assets/charts/NCD_Indicators_7.yaml
@@ -50,6 +50,7 @@ params:
   extra_form_data: {}
   dashboards:
   - 20
+  annotation_layers: []
 query_context: '{"datasource":{"id":36,"type":"table"},"force":false,"queries":[{"time_range":"No
   filter","granularity":"Visit Start date","filters":[],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":[],"metrics":[{"expressionType":"SQL","sqlExpression":"COUNT(DISTINCT
   CASE WHEN indicator = ''patients-aged-40-above-with-first-time ncd-screening'' THEN
