--- a/base/configs/superset/assets/charts/NCD_Missed_Appointments_Report_11.yaml
+++ b/base/configs/superset/assets/charts/NCD_Missed_Appointments_Report_11.yaml
@@ -46,6 +46,7 @@ params:
   extra_form_data: {}
   dashboards:
   - 16
+  annotation_layers: []
 query_context: '{"datasource":{"id":29,"type":"table"},"force":false,"queries":[{"time_range":"No
   filter","granularity":"Appointment date","filters":[],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s name","Gender","Age","Phone
