--- a/base/configs/superset/assets/charts/Registered_women_aged_30_to_49_years_that_have_had_their_CCS_screening_for_the_first_time_6.yaml
+++ b/base/configs/superset/assets/charts/Registered_women_aged_30_to_49_years_that_have_had_their_CCS_screening_for_the_first_time_6.yaml
@@ -1,5 +1,5 @@
 slice_name: Registered women aged 30 to 49 years that have had their CCS screening
-  for the first time and were VIA positive and referred
+  for the first time
 description: null
 certified_by: null
 certification_details: null
@@ -7,7 +7,7 @@ viz_type: table
 params:
   datasource: 35__table
   viz_type: table
-  slice_id: 155
+  slice_id: 154
   granularity_sqla: Visit Start date
   time_grain_sqla: P1D
   time_range: No filter
@@ -49,13 +49,13 @@ params:
     subject: indicator
     operator: ==
     operatorId: EQUALS
-    comparator: 80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred
+    comparator: women-aged-30-49-years-with-ccs-screening-first-time
     clause: WHERE
     sqlExpression: null
     isExtra: false
     isNew: false
     datasourceWarning: false
-    filterOptionName: filter_5stpm8h7cda_f2e3lyfu96d
+    filterOptionName: filter_0sxq4bni7gig_9yc69feloca
   order_by_cols: []
   row_limit: 1000
   server_page_length: 10
@@ -66,22 +66,23 @@ params:
   extra_form_data: {}
   dashboards:
   - 20
+  annotation_layers: []
 query_context: '{"datasource":{"id":35,"type":"table"},"force":false,"queries":[{"time_range":"No
-  filter","granularity":"Visit Start date","filters":[{"col":"indicator","op":"==","val":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
+  filter","granularity":"Visit Start date","filters":[{"col":"indicator","op":"==","val":"women-aged-30-49-years-with-ccs-screening-first-time"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
   Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
   End date","Visit Type","Referral source","Insurance type","First Screening?","HPV
   Test","Visibility of SCJ","VIA Test Result","Number of Quadrants","Area of ectocervix","Colposcopy","Cervical
   Biopsy","Pap Smear","Referral Facility","CC Reason for Referral","CC Treatment","CC
-  Follow-up date","Encounter date and time"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"35__table","viz_type":"table","slice_id":155,"granularity_sqla":"Visit
+  Follow-up date","Encounter date and time"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"35__table","viz_type":"table","slice_id":154,"granularity_sqla":"Visit
   Start date","time_grain_sqla":"P1D","time_range":"No filter","query_mode":"raw","groupby":[],"metrics":[],"all_columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
   Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
   End date","Visit Type","Referral source","Insurance type","First Screening?","HPV
   Test","Visibility of SCJ","VIA Test Result","Number of Quadrants","Area of ectocervix","Colposcopy","Cervical
   Biopsy","Pap Smear","Referral Facility","CC Reason for Referral","CC Treatment","CC
-  Follow-up date","Encounter date and time"],"percent_metrics":[],"adhoc_filters":[{"expressionType":"SIMPLE","subject":"indicator","operator":"==","operatorId":"EQUALS","comparator":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred","clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_5stpm8h7cda_f2e3lyfu96d"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"include_time":false,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[20],"force":false,"result_format":"json","result_type":"full"},"result_format":"json","result_type":"full"}'
+  Follow-up date","Encounter date and time"],"percent_metrics":[],"adhoc_filters":[{"expressionType":"SIMPLE","subject":"indicator","operator":"==","operatorId":"EQUALS","comparator":"women-aged-30-49-years-with-ccs-screening-first-time","clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_0sxq4bni7gig_9yc69feloca"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"include_time":false,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[20],"force":false,"result_format":"json","result_type":"full"},"result_format":"json","result_type":"full"}'
 cache_timeout: null
-uuid: a770204a-9220-4c7e-8ea0-4773b2bf8a62
+uuid: 37c2b93f-2cdf-4bf7-9195-076c83eda4b4
 version: 1.0.0
 dataset_uuid: 3680ccf7-bec7-45bc-8e9d-8afaba18b508
