--- a/base/configs/superset/assets/datasets/PostgreSQL/CCS_Referral_Status_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/CCS_Referral_Status_Query-dataset.yaml
@@ -73,6 +73,8 @@ template_params: null
 filter_select_enabled: false
 fetch_values_predicate: null
 extra: null
+normalize_columns: false
+always_filter_main_dttm: false
 uuid: 412423af-0fdd-4e33-b15d-2b63a9e213e1
 metrics:
 - metric_name: count
@@ -81,6 +83,7 @@ metrics:
   expression: count(*)
   description: null
   d3format: null
+  currency: null
   extra:
     warning_markdown: ''
   warning_text: null
@@ -90,7 +93,7 @@ columns:
     \u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (\u1780\u17BC\u178A_\u1788\u17D2\
     \u1798\u17C4\u17C7) (To - Health facility (Code_Name))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -104,7 +107,7 @@ columns:
   verbose_name: "\u1791\u17C5 - \u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\
     \u17B7\u1794\u178F\u17D2\u178F\u17B7 (To - OD - Operational District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -118,7 +121,7 @@ columns:
   verbose_name: "\u1798\u17BC\u179B\u17A0\u17C1\u178F\u17BB\u1793\u17C3\u1780\u17B6\
     \u179A\u1794\u1789\u17D2\u1787\u17BC\u1793 (Reason of Referral - Breast cancer)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -132,7 +135,7 @@ columns:
   verbose_name: "\u1798\u17BC\u179B\u17A0\u17C1\u178F\u17BB\u1793\u17C3\u1780\u17B6\
     \u179A\u1794\u1789\u17D2\u1787\u17BC\u1793 (Reason of Referral - Cervical cancer)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -147,7 +150,7 @@ columns:
     \u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (\u1780\u17BC\u178A_\u1788\u17D2\
     \u1798\u17C4\u17C7) (From - Health facility (Code_Name))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -161,7 +164,7 @@ columns:
   verbose_name: "\u1796\u17B8 - \u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\
     \u17B7\u1794\u178F\u17D2\u178F\u17B7 (From- OD - Operational District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -174,7 +177,7 @@ columns:
 - column_name: Referral Facility Province
   verbose_name: "\u1791\u17C5 - \u1781\u17C1\u178F\u17D2\u178F (To - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -187,7 +190,7 @@ columns:
 - column_name: Other breast cancer reason for referral
   verbose_name: "\"\u1795\u17D2\u179F\u17C1\u1784\u17D7\" (Other)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -200,7 +203,7 @@ columns:
 - column_name: Other cervical cancer reason for referral
   verbose_name: "\"\u1795\u17D2\u179F\u17C1\u1784\u17D7\" (Other)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -213,7 +216,7 @@ columns:
 - column_name: OpenMRS ID
   verbose_name: "ID \u17A2\u178F\u17B7\u1790\u17B7\u1787\u1793 (EMR) (Patient ID (EMR))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -227,7 +230,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1783\u17BB\
     \u17C6/\u179F\u1784\u17D2\u1780\u17B6\u178F\u17CB (Address - Commune)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -240,7 +243,7 @@ columns:
 - column_name: Facility Province
   verbose_name: "\u1796\u17B8 - \u1781\u17C1\u178F\u17D2\u178F (From - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -254,7 +257,7 @@ columns:
   verbose_name: "\u1782\u17C4\u178F\u17D2\u178F\u1793\u17B6\u1798 -\u1793\u17B6\u1798\
     \ \u17A2\u178F\u17B7\u1790\u17B7\u1787\u1793 (Client's Surename-Name)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -268,7 +271,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1781\u17C1\
     \u178F\u17D2\u178F (Address - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -282,7 +285,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1797\u17BC\
     \u1798\u17B7 (Address - Village)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -296,7 +299,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 \u179F\u17D2\
     \u179A\u17BB\u1780 (Address - District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -312,7 +315,7 @@ columns:
     \u17B6\u1798\u1780\u17B6\u179A\u1794\u1789\u17D2\u1787\u17BC\u1793 (Visit Date\
     \ at Hospital)"
   is_dttm: true
-  is_active: null
+  is_active: true
   type: DATETIME
   advanced_data_type: null
   groupby: true
@@ -325,7 +328,7 @@ columns:
 - column_name: Age
   verbose_name: "\u17A2\u17B6\u1799\u17BB (\u1786\u17D2\u1793\u17B6\u17C6) (Age (Years))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -339,7 +342,7 @@ columns:
   verbose_name: "\u179B\u17C1\u1781\u1791\u17BC\u179A\u179F\u17D0\u1796\u17D2\u1791\
     \ (Phone Number)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -350,4 +353,4 @@ columns:
   extra:
     warning_markdown: null
 version: 1.0.0
-database_uuid: 4e5f4045-a62d-4964-b719-58229a60e7fe
+database_uuid: 42834407-4570-4111-8bf6-4f7080413333
