--- a/base/configs/superset/assets/datasets/PostgreSQL/HC_NCD_OPD_Register_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/HC_NCD_OPD_Register_Query-dataset.yaml
@@ -119,8 +119,11 @@ sql: "SELECT\n    f_facility AS \"Facility Name\",\n    f_district AS \"Facility
   \        '2e27bbf9-d744-46a2-a7d4-cecd33c28b8a',\n        '758b9dd8-b6d0-4ac2-b245-0e7bffb4693a',\n\
   \        'cde3716a-2b98-4f10-b619-4d5a5a55503c',\n        '68f158ff-6396-4bab-8194-73255282bd23'\n\
   \    ) AND obs.encounter_type IN ('Health Center - NCD Screening')\n    LEFT OUTER\
-  \ JOIN orders drug_order ON drug_order.patient_uuid = pa.patient_uuid AND obs.encounter_uuid\
-  \ = drug_order.encounter_uuid\n    GROUP BY \n        facility_address.state_province,\
+  \ JOIN orders drug_order ON drug_order.patient_uuid = pa.patient_uuid AND (drug_order.date_activated\
+  \ >= vi.date_started\n            {% if to_dttm != undefined and to_dttm is not\
+  \ none %}\n                AND drug_order.date_activated <= '{{ to_dttm }}'\n  \
+  \          {% else %}\n                AND drug_order.date_activated <= vi.date_stopped\n\
+  \            {%- endif -%} \n            )\n    GROUP BY \n        facility_address.state_province,\
   \ \n        facility_address.county_district, \n        facility_address.name, \n\
   \        vi.visit_uuid\n) AS patient_info "
 params: null
@@ -128,6 +131,8 @@ template_params: null
 filter_select_enabled: false
 fetch_values_predicate: null
 extra: null
+normalize_columns: false
+always_filter_main_dttm: false
 uuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
 metrics:
 - metric_name: count
@@ -136,6 +141,7 @@ metrics:
   expression: count(*)
   description: null
   d3format: null
+  currency: null
   extra:
     warning_markdown: ''
   warning_text: null
@@ -145,7 +151,7 @@ columns:
     \u17D2\u1780\u179A\u1785\u17C3\u178A\u1793\u17D2\u1799 (Random (Any time Patient\
     \ come to get BSL Test))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -160,7 +166,7 @@ columns:
     \u17D2\u1780\u179A\u1798\u17BB\u1793\u17A2\u17B6\u17A0\u17B6\u179A (Fasting (at\
     \ least 8H before BSL))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -176,7 +182,7 @@ columns:
     \u179B\u1788\u17D2\u1798\u17C4\u17C7 - \u1794\u1789\u17D2\u1787\u17BC\u1793\u1791\
     \u17C5 (Referral - To facility name)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -193,7 +199,7 @@ columns:
     \u1793\u17C2\u1780\u1787\u17C6\u1784\u17BA\u1798\u17B7\u1793\u1786\u17D2\u179B\
     \u1784 (Teleconsultation with NCD Unit)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -207,7 +213,7 @@ columns:
   verbose_name: "\u1780\u17B6\u179A\u1782\u17D2\u179A\u1794\u17CB\u1782\u17D2\u179A\
     \u1784 - \u1790\u17D2\u1793\u17B6\u17C6 (Management - Medicine)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -222,7 +228,7 @@ columns:
     \u17BA\u1794\u17C1\u17C7\u178A\u17BC\u1784 \u179F\u179A\u179F\u17C3\u1788\u17B6\
     \u1798)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -236,7 +242,7 @@ columns:
   verbose_name: "\u179A\u17C4\u1782\u179C\u17B7\u1793\u17B7\u1785\u17D2\u1786\u17D0\
     \u1799 - 1 (Diagnosis - 1)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -250,7 +256,7 @@ columns:
   verbose_name: "\u179A\u17C4\u1782\u179C\u17B7\u1793\u17B7\u1785\u17D2\u1786\u17D0\
     \u1799 - 2 (Diagnosis - 2)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -265,7 +271,7 @@ columns:
     \u1784 - \u179A\u1794\u17C0\u1794\u179A\u179F\u17CB\u1793\u17C5 (Management -\
     \ Lifestyle)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -279,7 +285,7 @@ columns:
   verbose_name: "\u1791\u17B9\u1780\u1793\u17C4\u1798 - \u17A2\u17B6\u179B\u17CB\u1794\
     \u17CA\u17BB\u1793\u1798\u17B8\u1793 (Urine - Albumin)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -293,7 +299,7 @@ columns:
   verbose_name: "\u1791\u17B9\u1780\u1793\u17C4\u1798 - \u1780\u17C1\u178F\u17BC\u1793\
     \ (Urine - Ketone)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -308,7 +314,7 @@ columns:
     \u1780\u17CB\u1794\u17B6\u179A\u17B8\u178A\u17C2\u179A\u17AC\u1791\u17C1? (Does\
     \ the patient Smoke?)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -323,7 +329,7 @@ columns:
     \u179C\u17B9\u1784\u1794\u17D2\u179A\u1780\u1794\u178A\u17C4\u1799\u1782\u17D2\
     \u179A\u17C4\u17C7\u1790\u17D2\u1793\u17B6\u17C6 (Harmful use of alcohol)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -337,7 +343,7 @@ columns:
   verbose_name: "\u1798\u17BC\u179B\u17A0\u17C1\u178F\u17BB\u1793\u17C3\u1780\u17B6\
     \u179A\u1794\u1789\u17D2\u1787\u17BC\u1793 (Reason for referral)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -352,7 +358,7 @@ columns:
     \u1780\u17BC\u178A\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\
     \u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (Health Facility's Name)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -366,7 +372,7 @@ columns:
   verbose_name: "\u1798\u1793\u17D2\u1791\u17B8\u179A\u179F\u17BB\u1781\u17B6\u1797\
     \u17B7\u1794\u17B6\u179B\u1781\u17C1\u178F\u17D2\u178F (Provincial Health Department)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -380,7 +386,7 @@ columns:
   verbose_name: "\u1788\u17D2\u1798\u17C4\u17C7\u17A2\u17D2\u1793\u1780\u1787\u17C6\
     \u1784\u17BA (Client's name)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -395,7 +401,7 @@ columns:
     \u17D2\u17A2\u17C2\u1798/\u179B\u17BE\u179F\u179F\u1798\u17D2\u1796\u17B6\u1792\
     \u1788\u17B6\u1798 (Appointment reason)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -409,7 +415,7 @@ columns:
   verbose_name: "\u1780\u17B6\u179B\u1794\u179A\u17B7\u1785\u17D2\u1786\u1791\u178F\
     \u17B6\u1798\u178A\u17B6\u1793 (Date Appointment)"
   is_dttm: true
-  is_active: null
+  is_active: true
   type: DATETIME
   advanced_data_type: null
   groupby: true
@@ -423,7 +429,7 @@ columns:
   verbose_name: "\u1780\u17B6\u179B\u1794\u179A\u17B7\u1785\u17D2\u1786\u17C1\u1791\
     \u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799 (Visit Date)"
   is_dttm: true
-  is_active: null
+  is_active: true
   type: DATETIME
   advanced_data_type: null
   groupby: true
@@ -436,7 +442,7 @@ columns:
 - column_name: Respiratory Rate
   verbose_name: "\u1787\u17B8\u1796\u1785\u179A (Pulse Rate)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -450,7 +456,7 @@ columns:
   verbose_name: "\u1794\u1789\u17D2\u1787\u17BC\u1793\u178A\u17C4\u1799 (Referred\
     \ by)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -464,7 +470,7 @@ columns:
   verbose_name: "\u17A2\u178F\u17D2\u178F\u179B\u17C1\u1781\u17A2\u17D2\u1793\u1780\
     \u1787\u17C6\u1784\u17BA (Client ID)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -478,7 +484,7 @@ columns:
   verbose_name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\
     \u178F\u17D2\u178F\u17B7 (Operational District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -492,7 +498,7 @@ columns:
   verbose_name: "\u17A2\u179F\u1780\u1798\u17D2\u1798\u1797\u17B6\u1796\u179A\u17B6\
     \u1784\u1780\u17B6\u1799 (Physical inactivity)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -506,7 +512,7 @@ columns:
   verbose_name: "\u179B\u17C1\u1781\u1791\u17BC\u179A\u179F\u1796\u17D2\u1791 (Phone\
     \ Number)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -520,7 +526,7 @@ columns:
   verbose_name: "\u1794\u17D2\u179A\u1797\u17C1\u1791\u1780\u17B6\u179A\u1794\u1784\
     \u17CB\u1794\u17D2\u179A\u17B6\u1780\u17CB (Payment Type)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -534,7 +540,7 @@ columns:
   verbose_name: "\u1791\u17C6\u17A0\u17C6\u1785\u1784\u17D2\u1780\u17C1\u17C7 (\"\
     Waist Circumference\")"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -547,7 +553,7 @@ columns:
 - column_name: Commune/ Sangkat
   verbose_name: "\u1783\u17BB\u17C6/\u179F\u1784\u17D2\u1780\u17B6\u178F\u17CB (Commune)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -560,7 +566,7 @@ columns:
 - column_name: District/ Khan
   verbose_name: "\u179F\u17D2\u179A\u17BB\u1780 (District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -574,7 +580,7 @@ columns:
   verbose_name: "\u1795\u179B\u1792\u17C0\u1794\u1791\u1798\u17D2\u1784\u1793\u17CB\
     \ \u1793\u17B7\u1784\u1780\u1798\u17D2\u1796\u179F\u17CB (BMI)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -587,7 +593,7 @@ columns:
 - column_name: Diastolic Pressure
   verbose_name: "\u178A\u17D2\u1799\u17B6\u179F\u17D2\u178F\u17BC\u179B (DBP)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -600,7 +606,7 @@ columns:
 - column_name: Systolic Pressure
   verbose_name: "\u179F\u17CA\u17B8\u179F\u17D2\u178F\u17BC\u179B (SBP)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -613,7 +619,7 @@ columns:
 - column_name: Pulse
   verbose_name: "\u1787\u17B8\u1796\u1785\u179A (Pulse Rate)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -626,7 +632,7 @@ columns:
 - column_name: Province/City
   verbose_name: "\u1781\u17C1\u178F\u17D2\u178F (Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -640,7 +646,7 @@ columns:
   verbose_name: "\u1794\u17D2\u179A\u1797\u17C1\u1791\u1793\u17C3\u1780\u17B6\u179A\
     \u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799 (Age)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -654,7 +660,7 @@ columns:
   verbose_name: "\u1795\u17B9\u1780\u1791\u17B9\u1780\u179F\u17D2\u1780\u179A\u17E7\
     \u17E5\u1780\u17D2\u179A (OGTT)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -667,7 +673,7 @@ columns:
 - column_name: Height
   verbose_name: "\u1780\u1798\u17D2\u1796\u179F\u17CB (Height)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -680,7 +686,7 @@ columns:
 - column_name: Temperature
   verbose_name: "\u1780\u1798\u17D2\u178F\u17C5 (Temperature)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -693,7 +699,7 @@ columns:
 - column_name: Weight
   verbose_name: "\u1791\u1798\u17D2\u1784\u1793\u17CB (Weight)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -706,7 +712,7 @@ columns:
 - column_name: Gender
   verbose_name: "\u1797\u17C1\u1791 (Gender)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -720,7 +726,7 @@ columns:
   verbose_name: "\u1780\u17C6\u178E\u178F\u17CB\u179F\u1798\u17D2\u1782\u17B6\u179B\
     \u17CB (Remarks)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -733,7 +739,7 @@ columns:
 - column_name: Village
   verbose_name: "\u1797\u17BC\u1798\u17B7 (Village)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -746,7 +752,7 @@ columns:
 - column_name: Zone
   verbose_name: "\u178F\u17C6\u1794\u1793\u17CB (Zone)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -759,7 +765,7 @@ columns:
 - column_name: HbA1c
   verbose_name: null
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -772,7 +778,7 @@ columns:
 - column_name: SpO2
   verbose_name: null
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -785,7 +791,7 @@ columns:
 - column_name: Visit
   verbose_name: null
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -796,4 +802,4 @@ columns:
   extra:
     warning_markdown: null
 version: 1.0.0
-database_uuid: 4e5f4045-a62d-4964-b719-58229a60e7fe
+database_uuid: 42834407-4570-4111-8bf6-4f7080413333
