--- a/base/configs/superset/assets/datasets/PostgreSQL/NCD_Referral_Status_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/NCD_Referral_Status_Query-dataset.yaml
@@ -65,6 +65,8 @@ template_params: null
 filter_select_enabled: false
 fetch_values_predicate: null
 extra: null
+normalize_columns: false
+always_filter_main_dttm: false
 uuid: e7351329-6fdc-4bb7-9aaa-66cab8efeeb1
 metrics:
 - metric_name: count
@@ -73,6 +75,7 @@ metrics:
   expression: count(*)
   description: null
   d3format: null
+  currency: null
   extra:
     warning_markdown: ''
   warning_text: null
@@ -82,7 +85,7 @@ columns:
     \u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (\u1780\u17BC\u178A_\u1788\u17D2\
     \u1798\u17C4\u17C7) (To - Health facility (Code_Name))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -96,7 +99,7 @@ columns:
   verbose_name: "\u1791\u17C5 - \u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\
     \u17B7\u1794\u178F\u17D2\u178F\u17B7 (To - OD - Operational District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -111,7 +114,7 @@ columns:
     \u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (\u1780\u17BC\u178A_\u1788\u17D2\
     \u1798\u17C4\u17C7) (From - Health facility (Code_Name))"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -125,7 +128,7 @@ columns:
   verbose_name: "\u1796\u17B8 - \u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\
     \u17B7\u1794\u178F\u17D2\u178F\u17B7 (From- OD - Operational District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -138,7 +141,7 @@ columns:
 - column_name: Referral Facility Province
   verbose_name: "\u1791\u17C5 - \u1781\u17C1\u178F\u17D2\u178F (To - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -152,7 +155,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1783\u17BB\
     \u17C6/\u179F\u1784\u17D2\u1780\u17B6\u178F\u17CB (Address - Commune)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -165,7 +168,7 @@ columns:
 - column_name: Facility Province
   verbose_name: "\u1796\u17B8 - \u1781\u17C1\u178F\u17D2\u178F (From - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -179,7 +182,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1781\u17C1\
     \u178F\u17D2\u178F (Address - Province)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -193,7 +196,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 - \u1797\u17BC\
     \u1798\u17B7 (Address - Village)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -207,7 +210,7 @@ columns:
   verbose_name: "\u17A2\u17B6\u179F\u1799\u178A\u17D2\u178B\u17B6\u1793 \u179F\u17D2\
     \u179A\u17BB\u1780 (Address - District)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -221,7 +224,7 @@ columns:
   verbose_name: "\u1794\u1789\u17D2\u17A0\u17B6\u1780\u17B6\u179A\u1794\u1789\u17D2\
     \u1787\u17BC\u1793 (Reason for referral)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -235,7 +238,7 @@ columns:
   verbose_name: "\u1788\u17D2\u1798\u17C4\u17C7\u17A2\u17D2\u1793\u1780\u1787\u17C6\
     \u1784\u17BA (Patient Name)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -249,7 +252,7 @@ columns:
   verbose_name: "\u1780\u17B6\u179A\u1794\u179A\u17B7\u1785\u17D2\u1786\u17C1\u1791\
     \u1794\u1789\u17D2\u1787\u17BC\u1793 (Referral Date)"
   is_dttm: true
-  is_active: null
+  is_active: true
   type: DATE
   advanced_data_type: null
   groupby: true
@@ -263,7 +266,7 @@ columns:
   verbose_name: "\u17A2\u178F\u17D2\u178F\u179B\u17C1\u1781\u17A2\u17D2\u1793\u1780\
     \u1787\u17C6\u1784\u17BA (Client ID)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -277,7 +280,7 @@ columns:
   verbose_name: "\u179B\u17C1\u1781\u1791\u17BC\u179A\u179F\u1796\u17D2\u1791 (Phone\
     \ number)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: STRING
   advanced_data_type: null
   groupby: true
@@ -290,7 +293,7 @@ columns:
 - column_name: Age
   verbose_name: "\u17A2\u17B6\u1799\u17BB (Age)"
   is_dttm: false
-  is_active: null
+  is_active: true
   type: FLOAT
   advanced_data_type: null
   groupby: true
@@ -301,4 +304,4 @@ columns:
   extra:
     warning_markdown: null
 version: 1.0.0
-database_uuid: 4e5f4045-a62d-4964-b719-58229a60e7fe
+database_uuid: 42834407-4570-4111-8bf6-4f7080413333
